@@ -2,7 +2,6 @@ package union.utils.database.managers;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import union.utils.database.LiteDBBase;
 import union.utils.database.DBUtil;
@@ -40,25 +39,25 @@ public class GroupManager extends LiteDBBase {
 	public String getMaster(Integer groupId) {
 		Object data = selectOne(TABLE_MASTER, "masterId", "groupId", groupId);
 		if (data == null) return null;
-		return String.valueOf(data);
+		return (String) data;
 	}
 
 	public List<Integer> getOwnedGroups(String guildId) {
 		List<Object> data = select(TABLE_MASTER, "groupId", "masterId", guildId);
 		if (data.isEmpty()) return Collections.emptyList();
-		return data.stream().map(obj -> (Integer) obj).collect(Collectors.toList());
+		return data.stream().map(obj -> (Integer) obj).toList();
 	}
 
 	public String getName(Integer groupId) {
 		Object data = selectOne(TABLE_MASTER, "name", "groupId", groupId);
 		if (data == null) return null;
-		return String.valueOf(data);
+		return (String) data;
 	}
 
 	public Boolean isShared(Integer groupId) {
 		Object data = selectOne(TABLE_MASTER, "isShared", "groupId", groupId);
 		if (data == null) return false;
-		return (Integer) data == 1 ? true : false;
+		return (Integer) data == 1;
 	}
 
 	// groupMembers table
@@ -87,31 +86,31 @@ public class GroupManager extends LiteDBBase {
 	public List<String> getGroupGuildIds(Integer groupId) {
 		List<Object> data = select(TABLE_MEMBERS, "guildId", "groupId", groupId);
 		if (data.isEmpty()) return Collections.emptyList();
-		return data.stream().map(obj -> String.valueOf(obj)).collect(Collectors.toList());
+		return data.stream().map(obj -> String.valueOf(obj)).toList();
 	}
 
 	public List<String> getGroupGuildIds(Integer groupId, Boolean whitelisted) {
 		List<Object> data = select(TABLE_MEMBERS, "guildId", List.of("groupId", "whitelisted"), List.of(groupId, (whitelisted ? 1 : 0)));
 		if (data.isEmpty()) return Collections.emptyList();
-		return data.stream().map(obj -> String.valueOf(obj)).collect(Collectors.toList());
+		return data.stream().map(obj -> String.valueOf(obj)).toList();
 	}
 
 	public List<Integer> getGuildGroups(String guildId) {
 		List<Object> data = select(TABLE_MEMBERS, "groupId", "guildId", guildId);
 		if (data.isEmpty()) return Collections.emptyList();
-		return data.stream().map(obj -> (Integer) obj).collect(Collectors.toList());
+		return data.stream().map(obj -> (Integer) obj).toList();
 	}
 
 	public List<Integer> getManagedGroups(String guildId) {
 		List<Object> data = select(TABLE_MEMBERS, "groupId", List.of("guildId", "canManage"), List.of(guildId, 1));
 		if (data.isEmpty()) return Collections.emptyList();
-		return data.stream().map(obj -> (Integer) obj).collect(Collectors.toList());
+		return data.stream().map(obj -> (Integer) obj).toList();
 	}
 
 	public List<String> getGroupManagers(Integer groupId) {
 		List<Object> data = select(TABLE_MEMBERS, "guildId", List.of("groupId", "canManage"), List.of(groupId, 1));
 		if (data.isEmpty()) return Collections.emptyList();
-		return data.stream().map(obj -> String.valueOf(obj)).collect(Collectors.toList());
+		return data.stream().map(obj -> String.valueOf(obj)).toList();
 	} 
 
 	public Boolean canManage(Integer groupId, String guildId) {
